--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,4 @@
-
+<!-- The home page after logging in -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,6 +24,7 @@
             sans: ['Inter', 'system-ui', 'sans-serif'],
           },
         },
+
       }
     }
   </script>
@@ -115,8 +116,8 @@
         <div class="max-w-6xl mx-auto mb-12">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <!-- Portfolio Management Card -->
-            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100">
-              <div class="w-16 h-16 bg-primary rounded-lg flex items-center justify-center mb-6 mx-auto">
+            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100 flex flex-col items-center">
+              <div class="w-16 h-16 bg-primary rounded-lg flex items-center justify-center mb-6 mx-auto transform rotate-180">
                 <div class="flex space-x-1">
                   <div class="w-2 h-4 bg-white rounded"></div>
                   <div class="w-2 h-6 bg-white rounded"></div>
@@ -127,8 +128,8 @@
               <p class="text-gray-600 text-center leading-relaxed">
                 Comprehensive view of your investments including total assets, cash balance, and stock holdings.
               </p>
-              <div class="mt-6 text-center">
-                <a href="assetdashboard.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors">
+              <div class="mt-6 text-center w-full flex justify-center">
+                <a href="assetdashboard.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors w-40 justify-center">
                   <i class="fa fa-arrow-right mr-2"></i>
                   View Portfolio
                 </a>
@@ -136,7 +137,7 @@
             </div>
 
             <!-- Easy Trading Card -->
-            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100">
+            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100 flex flex-col items-center">
               <div class="w-16 h-16 bg-primary rounded-lg flex items-center justify-center mb-6 mx-auto">
                 <i class="fa fa-line-chart text-white text-2xl"></i>
               </div>
@@ -144,8 +145,8 @@
               <p class="text-gray-600 text-center leading-relaxed">
                 Execute buy and sell orders safely with our simulated trading environment.
               </p>
-              <div class="mt-6 text-center">
-                <a href="trading.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors">
+              <div class="mt-6 text-center w-full flex justify-center">
+                <a href="trading.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors w-40 justify-center">
                   <i class="fa fa-arrow-right mr-2"></i>
                   Start Trading
                 </a>
@@ -153,16 +154,23 @@
             </div>
 
             <!-- Real-time Market Data Card -->
-            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100">
+            <div class="bg-white rounded-xl shadow-lg p-8 hover-lift border border-gray-100 flex flex-col items-center">
               <div class="w-16 h-16 bg-primary rounded-lg flex items-center justify-center mb-6 mx-auto">
-                <i class="fa fa-chart-line text-white text-2xl"></i>
+                <!-- 折线图icon -->
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <polyline points="4,24 12,16 20,22 28,10" stroke="white" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                  <circle cx="4" cy="24" r="2" fill="white"/>
+                  <circle cx="12" cy="16" r="2" fill="white"/>
+                  <circle cx="20" cy="22" r="2" fill="white"/>
+                  <circle cx="28" cy="10" r="2" fill="white"/>
+                </svg>
               </div>
               <h3 class="text-xl font-bold text-gray-900 mb-4 text-center">Real-time Market Data</h3>
               <p class="text-gray-600 text-center leading-relaxed">
                 Stay updated with live stock prices and market movements to make informed decisions.
               </p>
-              <div class="mt-6 text-center">
-                <a href="stock.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors">
+              <div class="mt-6 text-center w-full flex justify-center">
+                <a href="stock.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors w-40 justify-center">
                   <i class="fa fa-arrow-right mr-2"></i>
                   View Market
                 </a>
