delete trading records

--- a/public/stock.html
+++ b/public/stock.html
@@ -78,7 +78,7 @@
               <li>
                 <a href="assetdashboard.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
                   <i class="fa fa-briefcase mr-3"></i>
-                  My Holdings
+                  Dashboard
                 </a>
               </li>
             <li>
@@ -93,12 +93,7 @@
                 Trading Center
               </a>
             </li>
-            <li>
-              <a href="records.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
-                <i class="fa fa-history mr-3"></i>
-                Trading Records
-              </a>
-            </li>
+           
           </ul>
         </nav>
       </div>
