--- a/public/stock-detail.html
+++ b/public/stock-detail.html
@@ -520,8 +520,16 @@
         .then((html) => {
           document.getElementById("sidebar-container").innerHTML = html;
 
-          // 加载完成后初始化侧边栏（如果有必要）
-          initSidebar();
+          // 侧边栏加载完成后，手动设置当前页面的活跃状态
+          setTimeout(() => {
+            const navItems = document.querySelectorAll(".sidebar-nav a");
+            navItems.forEach((item) => {
+              item.classList.remove("active");
+              if (item.getAttribute("href") === "stock.html") {
+                item.classList.add("active");
+              }
+            });
+          }, 100);
         })
         .catch((error) => console.error("加载侧边栏失败:", error));
 
