--- a/public/home.html
+++ b/public/home.html
@@ -360,8 +360,17 @@
         .then((response) => response.text())
         .then((html) => {
           document.getElementById("sidebar-container").innerHTML = html;
-          // 加载完成后检查登录状态
-          // checkLoginStatus();
+
+          // 侧边栏加载完成后，手动设置当前页面的活跃状态
+          setTimeout(() => {
+            const navItems = document.querySelectorAll(".sidebar-nav a");
+            navItems.forEach((item) => {
+              item.classList.remove("active");
+              if (item.getAttribute("href") === "home.html") {
+                item.classList.add("active");
+              }
+            });
+          }, 100);
         })
         .catch((error) => console.error("加载侧边栏失败:", error));
 
