--- a/public/stock-detail.html
+++ b/public/stock-detail.html
@@ -79,53 +79,71 @@
   <body class="bg-[#f8f9fa] text-gray-800">
     <div id="sidebar-container"></div>
     <!-- Sidebar -->
-    <!-- <aside class="w-64 bg-[#f8f9fa] border-r border-[#eee] flex flex-col justify-between fixed h-screen">
-    <div>
-      <div class="p-6 border-b border-[#eee]">
-        <h1 class="text-2xl font-extrabold text-[#d32f2f] tracking-wide">AssetPro</h1>
+    <!-- <aside
+      class="w-64 bg-[#f8f9fa] border-r border-[#eee] flex flex-col justify-between fixed h-screen"
+    >
+      <div>
+        <div class="p-6 border-b border-[#eee]">
+          <h1 class="text-2xl font-extrabold text-[#d32f2f] tracking-wide">
+            AssetPro
+          </h1>
+        </div>
+        <nav class="p-4">
+          <ul class="space-y-2">
+            <li>
+              <a
+                href="home.html"
+                class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]"
+              >
+                <i class="fa fa-home mr-3"></i>
+                Home
+              </a>
+            </li>
+            <li>
+              <a
+                href="assetdashboard.html"
+                class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]"
+              >
+                <i class="fa fa-briefcase mr-3"></i>
+                Dashboard
+              </a>
+            </li>
+            <li>
+              <a
+                href="stock.html"
+                class="flex items-center p-3 rounded-lg transition-colors font-medium text-[#d32f2f] bg-[#fff7f7] border-l-4 border-[#d32f2f] shadow-sm"
+              >
+                <i class="fa fa-line-chart mr-3"></i>
+                Stock Market
+              </a>
+            </li>
+            <li>
+              <a
+                href="trading.html"
+                class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]"
+              >
+                <i class="fa fa-exchange mr-3"></i>
+                Trading Center
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="p-4">
-        <ul class="space-y-2">
-                        <li>
-                <a href="home.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
-                  <i class="fa fa-home mr-3"></i>
-                  Home
-                </a>
-              </li>
-              <li>
-                <a href="assetdashboard.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
-                  <i class="fa fa-briefcase mr-3"></i>
-                  My Holdings
-                </a>
-              </li>
-          <li>
-            <a href="stock.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-[#d32f2f] bg-[#fff7f7] border-l-4 border-[#d32f2f] shadow-sm">
-              <i class="fa fa-line-chart mr-3"></i>
-              Stock Market
-            </a>
-          </li>
-          <li>
-            <a href="trading.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
-              <i class="fa fa-exchange mr-3"></i>
-              Trading Center
-            </a>
-          </li>
-          <li>
-            <a href="records.html" class="flex items-center p-3 rounded-lg transition-colors font-medium text-gray-700 hover:bg-white hover:text-[#d32f2f]">
-              <i class="fa fa-history mr-3"></i>
-              Trading Records
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <div class="p-4 border-t border-[#eee]">
-      <div class="flex flex-col items-start gap-2 w-full">
-                  <span class="text-gray-700 text-sm font-medium"><i class="fa fa-user-circle mr-2"></i><span id="username">team8demo</span></span>
-          <button id="logout-btn" class="px-4 py-1 bg-[#d32f2f] text-white rounded hover:bg-red-700 text-sm w-full">Logout</button>
+      <div class="p-4 border-t border-[#eee]">
+        <div class="flex flex-col items-start gap-2 w-full">
+          <span class="text-gray-700 text-sm font-medium"
+            ><i class="fa fa-user-circle mr-2"></i
+            ><span id="username">team8demo</span></span
+          >
+          <button
+            id="logout-btn"
+            class="px-4 py-1 bg-[#d32f2f] text-white rounded hover:bg-red-700 text-sm w-full"
+          >
+            Logout
+          </button>
+        </div>
       </div>
-    </div>
-  </aside> -->
+    </aside> -->
 
     <!-- Main Content Area -->
     <main class="ml-64 min-h-screen bg-[#f8f9fa] p-8">
@@ -273,9 +291,27 @@
       let stockSymbol = null;
       let chart = null;
       let currentInterval = "1day"; // Default interval
+
+      fetch("/sidebar.html")
+        .then((response) => response.text())
+        .then((html) => {
+          document.getElementById("sidebar-container").innerHTML = html;
+
+          // 侧边栏加载完成后，手动设置当前页面的活跃状态
+          setTimeout(() => {
+            const navItems = document.querySelectorAll(".sidebar-nav a");
+            navItems.forEach((item) => {
+              item.classList.remove("active");
+              if (item.getAttribute("href") === "stock.html") {
+                item.classList.add("active");
+              }
+            });
+          }, 100);
+        })
+        .catch((error) => console.error("加载侧边栏失败:", error));
       window.onload = () => {
         // Check login status
-        checkLoginStatus();
+        // checkLoginStatus();
 
         const params = new URLSearchParams(window.location.search);
         stockSymbol = params.get("symbol");
@@ -502,45 +538,19 @@
         }
       }
       // Check login status
-      function checkLoginStatus() {
-        const isLoggedIn = localStorage.getItem("isLoggedIn");
-        const userEmail = localStorage.getItem("userEmail");
+      // function checkLoginStatus() {
+      //   const isLoggedIn = localStorage.getItem("isLoggedIn");
+      //   const userEmail = localStorage.getItem("userEmail");
 
-        if (!isLoggedIn || !userEmail) {
-          // If not logged in, redirect to login page
-          window.location.href = "login.html";
-          return;
-        }
+      //   if (!isLoggedIn || !userEmail) {
+      //     // If not logged in, redirect to login page
+      //     window.location.href = "login.html";
+      //     return;
+      //   }
 
-        // Update user information display
-        document.getElementById("username").textContent = userEmail;
-      }
-      fetch("/sidebar.html")
-        .then((response) => response.text())
-        .then((html) => {
-          document.getElementById("sidebar-container").innerHTML = html;
-
-          // 侧边栏加载完成后，手动设置当前页面的活跃状态
-          setTimeout(() => {
-            const navItems = document.querySelectorAll(".sidebar-nav a");
-            navItems.forEach((item) => {
-              item.classList.remove("active");
-              if (item.getAttribute("href") === "stock.html") {
-                item.classList.add("active");
-              }
-            });
-          }, 100);
-        })
-        .catch((error) => console.error("加载侧边栏失败:", error));
-
-      // Logout functionality
-      document
-        .getElementById("logout-btn")
-        .addEventListener("click", function () {
-          localStorage.removeItem("userEmail");
-          localStorage.removeItem("isLoggedIn");
-          window.location.href = "index.html";
-        });
+      //   // Update user information display
+      //   document.getElementById("username").textContent = userEmail;
+      // }
     </script>
   </body>
 </html>
