--- a/public/assetdashboard.html
+++ b/public/assetdashboard.html
@@ -65,7 +65,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        font-family: "Inter", "system-ui", sans-serif;
       }
 
       :root {
@@ -451,7 +451,7 @@
       <!-- 顶部欢迎区 -->
       <div class="top-section">
         <div class="greeting">
-          <h1>Welcome back, Team8</h1>
+          <h1 class="text-3xl font-extrabold text-[#222] mb-1">Welcome back, Team8</h1>
           <p>Here's your portfolio overview for today</p>
         </div>
         <button class="toggle-btn" id="hideBalanceBtn">
