--- a/public/home.html
+++ b/public/home.html
@@ -329,7 +329,7 @@
                   View your transaction history and records
                 </p>
                 <a
-                  href="records.html"
+                  href="trading.html"
                   class="block w-full bg-gray-50 hover:bg-purple-500 hover:text-white text-purple-500 text-center py-2 px-4 rounded-lg transition-colors font-medium"
                 >
                   <i class="fa fa-arrow-right mr-2"></i>View Records
