--- a/public/index.html
+++ b/public/index.html
@@ -62,13 +62,13 @@
         <div class="flex justify-between items-center py-4">
           <div class="flex items-center">
             <div class="flex items-center space-x-2">
-              <div class="w-8 h-8 bg-primary rounded-lg flex items-center justify-center">
-                <div class="flex space-x-1">
-                  <div class="w-1 h-3 bg-white rounded"></div>
-                  <div class="w-1 h-5 bg-white rounded"></div>
-                  <div class="w-1 h-7 bg-white rounded"></div>
-        </div>
-      </div>
+                             <div class="w-8 h-8 bg-primary rounded-lg flex items-center justify-center">
+                 <div class="flex space-x-1 transform rotate-180">
+                   <div class="w-1 h-3 bg-white rounded"></div>
+                   <div class="w-1 h-5 bg-white rounded"></div>
+                   <div class="w-1 h-7 bg-white rounded"></div>
+         </div>
+       </div>
               <span class="text-xl font-bold text-gray-900">AssetPro</span>
         </div>
       </div>
