--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
       <div class="text-center">
         <div class="flex items-center justify-center mb-4">
           <div class="w-12 h-12 bg-primary rounded-lg flex items-center justify-center mr-3">
-            <div class="flex space-x-1">
+            <div class="flex space-x-1 transform rotate-180">
               <div class="w-1 h-3 bg-white rounded"></div>
               <div class="w-1 h-5 bg-white rounded"></div>
               <div class="w-1 h-7 bg-white rounded"></div>
