--- a/public/stock-detail.html
+++ b/public/stock-detail.html
@@ -26,6 +26,9 @@
               "dark-gray": "#8c8c8c",
               "nav-active": "#fff7f7",
             },
+            fontFamily: {
+              sans: ["Inter", "system-ui", "sans-serif"],
+            },
           },
         },
       };
