--- a/public/trading.html
+++ b/public/trading.html
@@ -830,6 +830,7 @@
                       </tbody>
                     </table>
                   </div>
+                  <div id="pagination" class="flex justify-end items-center mt-4 space-x-2 text-sm">123456</div>
                 </div>
               </div>
 
@@ -1688,6 +1689,8 @@
         //   });
       });
 
+      // 分页查询功能更新
+      
       // Fetch and render transactions交易记录展示
       const userId = 1; // 根据实际用户 ID 替换
       const API_URL = `/api/user/${userId}/transactions`;
@@ -1709,15 +1712,19 @@
         },
       };
 
-      const fetchTransactions = async (filterType = "all") => {
-        let url = `${API_URL}?page=1&pageSize=10`;
+      //分页查询更改
+      let currentPage = 1;
+      const pageSize = 5;
+
+      const fetchTransactions = async (filterType = "all", page = 1) => {
+        currentPage = page;
+        let url = `${API_URL}?page=${page}&pageSize=${pageSize}`;
         if (["buy", "sell"].includes(filterType)) {
           url += `&type=${filterType}`;
         }
 
         const res = await fetch(url);
         const data = await res.json();
-
         const tbody = document.getElementById("transactionTableBody");
         tbody.innerHTML = "";
 
@@ -1729,33 +1736,147 @@
           const row = document.createElement("tr");
           row.className = "transaction-row";
           row.innerHTML = `
-                <td class="w-1/6 px-2 py-3 whitespace-nowrap">${dateStr}</td>
-                <td class="w-1/6 px-2 py-3 whitespace-nowrap font-medium">${
-                  tx.symbol
-                }</td>
-                <td class="w-1/6 px-2 py-3 whitespace-nowrap text-center">
-                <span class="badge ${typeInfo.badgeClass}">
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap">${dateStr}</td>
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap font-medium">${tx.symbol}</td>
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-center">
+              <span class="badge ${typeInfo.badgeClass}">
                 <i data-lucide="${typeInfo.icon}" class="w-3 h-3 mr-1"></i>
                 ${typeInfo.label}
-                </span>
-                </td>
-            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">${
-              tx.quantity
-            } shares</td>
-            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">$${tx.price.toFixed(
-              2
-            )}</td>
-            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right font-medium ${
-              typeInfo.amountClass
-            }">
-            ${typeInfo.sign}$${totalAmount}
+              </span>
             </td>
-            `;
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">${tx.quantity} shares</td>
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">$${tx.price.toFixed(2)}</td>
+            <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right font-medium ${typeInfo.amountClass}">
+              ${typeInfo.sign}$${totalAmount}
+            </td>`;
           tbody.appendChild(row);
         });
 
-        lucide.createIcons(); // 渲染 Lucide 图标
+        renderPagination(data.total, data.page, data.pageSize);
+        lucide.createIcons();
       };
+
+
+    //   //分页按钮渲染
+      let currentFilter = "all"; // 添加这一行
+
+      // 统一监听所有带 filter-btn 类的按钮
+      document.querySelectorAll(".filter-btn").forEach(button => {
+        button.addEventListener("click", () => {
+          const filter = button.getAttribute("data-filter");
+          currentFilter = filter;
+
+          // 切换按钮样式
+          document.querySelectorAll(".filter-btn").forEach(btn => {
+            btn.classList.remove("filter-btn-active", "bg-blue-50", "text-blue-600");
+            btn.classList.add("bg-gray-100");
+          });
+          button.classList.add("filter-btn-active", "bg-blue-50", "text-blue-600");
+          button.classList.remove("bg-gray-100");
+
+          fetchTransactions(filter, 1); // 调接口
+        });
+      });
+      const renderPagination = (total, page, pageSize) => {
+      const totalPages = Math.ceil(total / pageSize);
+      const container = document.getElementById("pagination");
+      container.innerHTML = "";
+
+      if (totalPages <= 1) return; // 不需要分页
+
+      // 上一页
+      const prev = document.createElement("button");
+      prev.textContent = "«";
+      prev.disabled = page === 1;
+      prev.className = "px-2 py-1 border rounded";
+      prev.onclick = () => fetchTransactions(currentFilter, page - 1);
+      container.appendChild(prev);
+
+      // 当前页 + 相邻页码（你可以根据需要优化分页算法）
+      for (let i = 1; i <= totalPages; i++) {
+        const btn = document.createElement("button");
+        btn.textContent = i;
+        btn.className = `px-2 py-1 border rounded ${i === page ? "bg-gray-200 font-bold" : ""}`;
+        btn.onclick = () => fetchTransactions(currentFilter, i);
+        container.appendChild(btn);
+      }
+
+    //   // 下一页
+      const next = document.createElement("button");
+      next.textContent = "»";
+      next.disabled = page === totalPages;
+      next.className = "px-2 py-1 border rounded";
+      next.onclick = () => fetchTransactions(currentFilter, page + 1);
+      container.appendChild(next);
+    };
+      // // Fetch and render transactions交易记录展示
+      // const userId = 1; // 根据实际用户 ID 替换
+      // const API_URL = `/api/user/${userId}/transactions`;
+
+      // const typeMap = {
+      //   buy: {
+      //     label: "Buy (Long)",
+      //     icon: "trending-up",
+      //     badgeClass: "badge-long",
+      //     amountClass: "text-red-600",
+      //     sign: "-",
+      //   },
+      //   sell: {
+      //     label: "Sell (Short)",
+      //     icon: "trending-down",
+      //     badgeClass: "badge-short",
+      //     amountClass: "text-green-600",
+      //     sign: "+",
+      //   },
+      // };
+
+      // const fetchTransactions = async (filterType = "all") => {
+      //   let url = `${API_URL}?page=1&pageSize=10`;
+      //   if (["buy", "sell"].includes(filterType)) {
+      //     url += `&type=${filterType}`;
+      //   }
+
+      //   const res = await fetch(url);
+      //   const data = await res.json();
+
+      //   const tbody = document.getElementById("transactionTableBody");
+      //   tbody.innerHTML = "";
+
+      //   data.transactions.forEach((tx) => {
+      //     const typeInfo = typeMap[tx.type] || {};
+      //     const dateStr = new Date(tx.timestamp).toISOString().split("T")[0];
+      //     const totalAmount = (tx.price * tx.quantity).toFixed(2);
+
+      //     const row = document.createElement("tr");
+      //     row.className = "transaction-row";
+      //     row.innerHTML = `
+      //           <td class="w-1/6 px-2 py-3 whitespace-nowrap">${dateStr}</td>
+      //           <td class="w-1/6 px-2 py-3 whitespace-nowrap font-medium">${
+      //             tx.symbol
+      //           }</td>
+      //           <td class="w-1/6 px-2 py-3 whitespace-nowrap text-center">
+      //           <span class="badge ${typeInfo.badgeClass}">
+      //           <i data-lucide="${typeInfo.icon}" class="w-3 h-3 mr-1"></i>
+      //           ${typeInfo.label}
+      //           </span>
+      //           </td>
+      //       <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">${
+      //         tx.quantity
+      //       } shares</td>
+      //       <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right">$${tx.price.toFixed(
+      //         2
+      //       )}</td>
+      //       <td class="w-1/6 px-2 py-3 whitespace-nowrap text-right font-medium ${
+      //         typeInfo.amountClass
+      //       }">
+      //       ${typeInfo.sign}$${totalAmount}
+      //       </td>
+      //       `;
+      //     tbody.appendChild(row);
+      //   });
+
+      //   lucide.createIcons(); // 渲染 Lucide 图标
+      // };
 
       // 初次加载
       fetchTransactions();
