Fixed sidebar logo

--- a/public/sidebar.html
+++ b/public/sidebar.html
@@ -11,7 +11,13 @@
 <aside class="sidebar expanded" id="sidebar">
   <div class="sidebar-header">
     <div class="sidebar-logo">
-      <div class="sidebar-logo-icon">A</div>
+      <div class="sidebar-logo-icon">
+        <div class="flex space-x-1 transform rotate-180">
+          <div class="w-1 h-3 bg-white rounded"></div>
+          <div class="w-1 h-5 bg-white rounded"></div>
+          <div class="w-1 h-7 bg-white rounded"></div>
+        </div>
+      </div>
       <div class="sidebar-logo-text">AssetPro</div>
     </div>
   </div>
