Small change to landing page for better alignment

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
           </div>
           <h3 class="text-xl font-bold text-gray-900 mb-4 text-center">Easy Trading</h3>
           <p class="text-gray-600 text-center leading-relaxed">
-            Execute buy and sell orders safely with our simulated trading environment.
+            Execute buy and sell orders safely with our simulated trading environment provided in this platform.
           </p>
           <div class="mt-6 text-center w-full flex justify-center">
             <a href="trading.html" class="inline-flex items-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-primary-light transition-colors w-40 justify-center">
